--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-fc": "^0.41.0",
+    "react-icons": "^4.6.0",
     "react-on-screen": "^2.1.1",
+    "react-router": "^6.4.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
