--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-fc": "^0.41.0",
     "react-icons": "^4.6.0",
     "react-on-screen": "^2.1.1",
     "react-router": "^6.4.3",
