--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-on-screen": "^2.1.1",
     "react-router": "^6.4.3",
     "react-router-bootstrap": "^0.26.2",
