--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@types/react-dom": "^18.0.8",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.0",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "datatables.net": "^1.13.1",
+    "datatables.net-dt": "^1.13.1",
     "history": "^5.3.0",
+    "jquery": "^3.6.3",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.7.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
