--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap-icons": "^1.10.2",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
+    "formik": "^2.2.9",
     "history": "^5.3.0",
     "jquery": "^3.6.3",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.3",
     "react": "^18.2.0",
